Thu Oct 31 11:55:25 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Put libd4r in LIBS instead of NETWORK_LIBS.

Thu Oct 31 15:46:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am configure.in samples/Makefile.am:
	* src/ctlib/unittests/Makefile.am src/dblib/unittests/Makefile.am:
	* src/tds/unittests/Makefile.am:
	- make distcheck work again (define 
	  DISTCHECK_CONFIGURE_FLAGS='--enable-distcheck-build' before call
	  make)

Wed Oct 30 15:56:20 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt src/dblib/dblib.c:
	- Implement dbmnycmp(), dbmnycopy(), dbmnyzero(). (untested)

Wed Oct 30 15:27:41 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h src/ctlib/unittests/t0006.c:
	- mnylow is unsigned.

Wed Oct 30 15:20:51 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/bcp.c:
	- Eliminate a potential buffer overrun.  There's still
	  another one lurking here (colclause) that needs attention...

Wed Oct 30 14:35:40 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/ct.c:
	- Add a default case in outer loop of ct_results().  Paranoia.

Tue Oct 29 16:23:23 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/sybdb.h src/dblib/dblib.c:
	- Implement dbmny4minus(), dbmny4zero(), dbmny4add(), dbmny4sub(),
	  dbmny4cmp(), dbmny4copy() (all untested).

Tue Oct 29 11:44:00 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/tsql.c:
	- Fix processing of result sets (fallout from Bill's patch).

Tue Oct 29 10:22:43 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/CodingStyle: updated and some specification

Mon Oct 28 15:20:23 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/CodingStyle:
	- Update indentation notes.

Mon Oct 28 14:56:22 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/.indent.pro:
	- Updated based on today's indentation discussion.

Mon Oct 28 12:52:30 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt src/ctlib/cs.c: